[package]
name = "mongodb-file-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
watch = "0.2.3"
notify = "6.1.1"
regex = "1.10.2"
lazy_static = "1.4.0"
bcrypt = "0.15.0"
uuid = "1.4.1"
once_cell = "1.8.0"
serde_derive = "1.0.116"
serde_json = "1.0.58"
chrono = "0.4.31"

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]
